@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title US025 - Cancel an entry in the agenda

class Agenda {
}

class Task {
    title
    description
    degreeOfUrgency
    expectedDuration
    status
    startingDate
}

class GSM {
}

class GreenSpace {
    name
    area
    type
    address
}


Task "*" -- "1" Agenda : was added >
Task "1" -- "1" GreenSpace : is associated with >
GSM "1" -- "*" Task : cancels >
@enduml